# invoice-env

./: .gitignore  70B_results.json  8B_results.json  BLOG.md  DEFENSE.md  Dockerfile  Llama-3.1-8B-Instruct_results.json  README.md  add_coauthor.sh  app.py  blog_post.md  colab_rl_training.ipynb  colab_train.ipynb  debug.py  eval_after_training.py  fix_coauthor.ps1  hackathon_gap_analysis.md  hf_launch_blog.md  inference.py  openenv.yaml  patch_notebook.py  plot_llm_results.py  pyproject.toml  requirements.txt  reward_curves_hf_version.tmp  run_full_benchmark.py  run_llm_comparison.py  sim_all.py  smoke_test.py  test_expert.py  train.py  training_results.json  verify_episode.py  verify_llm.py  video_script_5slides.md
app/: demo.py  environment.py  main.py  models.py  tasks.py
server/: app.py
