[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enterprise-ap-env"
version = "1.0.0"
description = "An OpenEnv-compatible Enterprise Accounts Payable AI agent environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "openai>=2.7.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]